k8s/overlays/dev/namespace-patch.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: warehouse-cv
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
